--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p class="footer__subtitle">Want to know more or just chat? You are welcome!</p>
             <button class="footer__btn">Send message</button>
             <div class="footer__social">
-                <img class="footer__icon" src="/image/Group 2.svg" alt="linledIn">
+                <img class="footer__icon" src="https://design_portfolio.github.io/image/Group 2.svg" alt="linledIn">
                 <img class="footer__icon" src="/image/Group 8.svg" alt="instagram">
                 <img class="footer__icon" src="/image/Group 9.svg" alt="behance">
                 <img class="footer__icon" src="/image/Group 10.svg" alt="dribble">
